--- a/pages/laboration.html
+++ b/pages/laboration.html
@@ -4,6 +4,7 @@
           <meta charset="utf-8"/>
            <title> Laboration </title>
      <link href="../pics/styles.css" rel="stylesheet" type="text/css">
+     <link href="../pics/print.css" rel="stylesheet" type="text/css" media="print" >
     </head>
     
                          
@@ -18,10 +19,10 @@
         <div id = "nav">
                  <h2>mina sajt</h2>
              <ul>   
-                 <li><a href = "../index.html"> start </a></li>
-                 <li><a href = "presentation.html"> presentation</a></li>
-                 <li><a href = "laboration.html"> laboration</a></li>
-                 <li><a href = "kontakt.html"> kontakt</a></li>
+                 <li><a id="start-icon" href = "../index.html"> start </a></li>
+                 <li><a id="presentation-icon" href = "presentation.html"> presentation</a></li>
+                 <li><a id="laboration-icon" href = "laboration.html"> laboration</a></li>
+                 <li><a id="kontakt-icon" href = "kontakt.html"> kontakt</a></li>
             </ul>
         </div>
               <div id="section">
