done with labb nummber 4

--- a/pages/laboration.html
+++ b/pages/laboration.html
@@ -5,6 +5,8 @@
            <title> Laboration </title>
      <link href="../pics/styles.css" rel="stylesheet" type="text/css">
      <link href="../pics/print.css" rel="stylesheet" type="text/css" media="print" >
+      <link href="../pics/mobil.css" rel="stylesheet"  type="text/css" media="screen" />
+     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
     </head>
     
                          
