--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -4,7 +4,9 @@
 <head>
   <title> Kontakt</title>
      <link href="../pics/styles.css" rel="stylesheet" type="text/css">
-      <link href="pics/print.css" rel="stylesheet" type="text/css" media="print" >
+      <link href="../pics/print.css" rel="stylesheet" type="text/css" media="print" >
+       <link href="../pics/mobil.css" rel="stylesheet"  type="text/css" media="screen" />
+         <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
 </head>
 <meta charset="utf-8"/>
 
@@ -17,7 +19,7 @@
             <ul>
                 <li><a id="start-icon" href = "../index.html"> start</a></li>
                 <li><a id="presentation-icon" href = "presentation.html"> presentation</a></li>
-                <li><a id="laboration-icone" href = "laboration.html"> laboration </a></li>
+                <li><a id="laboration-icon" href = "laboration.html"> laboration </a></li>
                 <li><a id="kontakt-icon" href = "kontakt.html"> kontakt</a></li>
             </ul>
         
