--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -4,7 +4,8 @@
      <meta charset="utf-8"/>
      
        <title> Presentation </title>
-       
+       <link rel="apple-touch-icon" href="../pics/touch.png">
+          <link rel="icon" href="../pics/favicon.ico" type="image/x-icon">
         <link href="../pics/styles.css" rel="stylesheet" type="text/css">
         <link href="../pics/print.css" rel="stylesheet" type="text/css" media="print" >
           <link href="../pics/mobil.css" rel="stylesheet"  type="text/css" media="screen" />
