--- a/pages/laboration.html
+++ b/pages/laboration.html
@@ -3,9 +3,11 @@
     <head>
           <meta charset="utf-8"/>
            <title> Laboration </title>
+           <link rel="apple-touch-icon" href="../pics/touch.png">
+            <link rel="icon" href="../pics/favicon.ico" type="image/x-icon">
      <link href="../pics/styles.css" rel="stylesheet" type="text/css">
      <link href="../pics/print.css" rel="stylesheet" type="text/css" media="print" >
-      <link href="../pics/mobil.css" rel="stylesheet"  type="text/css" media="screen" />
+    <link href="../pics/mobil.css" rel="stylesheet"  type="text/css" media="screen" />
      <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
     </head>
     
