uppdatering för lab 5

--- a/pages/laboration.html
+++ b/pages/laboration.html
@@ -187,7 +187,7 @@
              
       <div id="footer">
           <p>det här skrevs : 2014-09-12 </p>
-          <p> asvarig är Aslogan</p>
+          <p> ansvarig är Aslogan</p>
      </div>
      
      </div>
